<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.MainActivity"
    android:background="@color/light_grey">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="@dimen/search_bar_width"
        android:layout_height="@dimen/card_view_height"
        android:layout_centerInParent="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="@dimen/search_bar_width"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/user_input_edit_text_view"
                android:layout_width="@dimen/search_editable_text_width"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/tooltip_search_button"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/min_dimension"/>

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="@dimen/search_button_width"
                android:layout_height="match_parent"
                android:background="@color/search_button_background"
                android:contentDescription="@string/search_button_content_desc"
                android:onClick="searchFor"
                android:scaleType="centerInside"
                android:src="@drawable/ic_search_black_18px"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/card_view"
        android:gravity="center"
        android:paddingBottom="@dimen/title_bottom_padding"
        android:text="@string/search_a_book"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:textSize="25sp"
        android:typeface="monospace"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/title_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/min_dimension"
            android:text="@string/title_radio_text"/>

        <RadioButton
            android:id="@+id/author_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/min_dimension"
            android:text="@string/author_radio_text"/>

        <RadioButton
            android:id="@+id/isbn_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/min_dimension"
            android:text="@string/isbn_radio_text"/>

    </RadioGroup>

    <Button
        android:id="@+id/uncheck_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/uncheck"
        android:textAllCaps="false"
        />

</RelativeLayout>
